# py_hw

./: .gitignore  README.md  brocard_scraper.py  main.py  pyproject.toml
hw16/: config.py
hw16/templates/: base.html  index.html
hw18/: main.py
hw20/: databases.py  main.py
hw20/static/: styles.css
hw20/templates/: 404.html  admin.html  admin_login.html  order.html
hw22/: main.py  messenger_project_db.py
hw22/static/: styles.css
hw22/templates/: base.html  create_message.html  friend_requests.html  index.html  login.html  my_friends.html  new_messages.html  register.html  search_friends.html  user_messages.html
static/: styles.css
templates/: parfumes.html
